[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/OpenAI.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 10.0

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Container" type="Control" parent="Canvas"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="Canvas/Container"]
margin_right = 40.0
margin_bottom = 40.0

[node name="UserInput" type="LineEdit" parent="Canvas/Container"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -87.0
text = "gdsg"

[node name="Scroll" type="ScrollContainer" parent="Canvas/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -86.0

[node name="Container" type="VBoxContainer" parent="Canvas/Container/Scroll"]
margin_right = 1280.0
rect_min_size = Vector2( 1280, 0 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="text_entered" from="Canvas/Container/UserInput" to="." method="_on_UserInput_text_entered"]
